--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+
+    <style>@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+    </style>
+
+
+    * {
+margin: 0;
+padding: 0;
+border: 0;
+}
+
 boddy {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: lato, sans-serif;
+    font-weight: 300;
 }
