--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 
-    <style>@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
-    </style>
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+ 
 
 
     * {
@@ -9,7 +10,16 @@ padding: 0;
 border: 0;
 }
 
-boddy {
+body {
     font-family: lato, sans-serif;
     font-weight: 300;
+    color:#3a3a3a;
+}
+
+/* headings and logo*/
+h1,h2 {
+    font-family:Oswald , sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #252525;
 }
