--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,4 +218,18 @@ footer {
     font-size: 160%;
     margin: 1%;
     padding: 5%;
-    color: #3a3a3a;
+    color: #3a3a3a;}
+
+    #photos {
+            clear: both;
+            line-height: 0;
+            column-count: 4;
+            column-gap: 0;
+
+
+    }
+
+    #photos > img {
+        width: 100%;
+        
+    }
