--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,13 @@ footer {
             float: left;
             padding: 0;
         }
+
+        #time > div {
+            width: 100%;
+            clear: both;
+            height: 150px;
+            padding: 0;
+        }
     
         hr {
             display: none;
